--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -4,6 +4,8 @@ body {
     font-size: 12px;
     background: url(../images/bg.gif) repeat-x;
     color: #333;
+    padding: 0px;
+    margin: 0px;
 }
 
 a img {
@@ -32,13 +34,81 @@ a:hover {
 }
 
 #header {
-	height: 24px;
-    width: 100%;
-    overflow: hidden;
-    background: url(../images/logo.gif) no-repeat 1px 5px;
-    padding-top: 9px;
-    margin-bottom: 10px;
-    color: #2266bb;
+	height: 40px;
+  width: 100%;
+  overflow: hidden;
+  background: #ccc;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c8e5f7', endColorstr='#8ab0d1'); /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, from(#c8e5f7), to(#8ab0d1)); /* for webkit browsers */
+  background: -moz-linear-gradient(top, #c8e5f7, #8ab0d1); /* for firefox 3.6+ */
+  margin-bottom: 10px;
+  color: #2266bb;
+  border-bottom: #ddd solid 1px;
+}
+
+#header .inner {
+  width: 960px;
+  margin: 0 auto;
+  height: 30px;
+  padding-top: 11px;
+}
+
+#header .inner .search {
+  float: right;
+}
+
+#header .inner .search input {
+  width: 150px;
+  margin-top: -3px;
+}
+
+.default-text {
+  color: #ccc;
+}
+
+.logo {
+  font-weight: bold;
+  font-size: 15px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.entity-link {
+  font-weight: bold;
+  font-size: 14px;
+}
+
+fieldset {
+  border: 1px solid #ddd;
+  border-right: 2px solid #ddd;
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+fieldset h3 {
+  background: #FCFCFC;
+  padding: 5px 1px;
+  margin: 0px;
+  margin-bottom: 10px;
+  text-align: center;
+  font-weight: normal;
+  font-size: 15px;
+}
+
+.type-property {
+  border-left: 1px solid #eee;
+  margin-bottom: 5px;
+  padding-left: 10px;
+  overflow: hidden;
+}
+
+.property-label {
+  float: left;
+  width: 150px;
+}
+
+.property-values {
+  float: left;
 }
 
 #flashes {
@@ -62,17 +132,39 @@ a:hover {
     background-color: #FCC;
 }
 
-.delimiter {
-	background: url(../images/splitter-bg.png) repeat-x scroll left center;
+.page-info {
+  float: left;
 }
 
-.delimiter span {
-	background: #fff;
-	color: #888;
-	text-transform: uppercase;
-	font-size: 11px;
-	padding-right: 5px;
-	font-weight: bold;
+.aliases {
+  margin-top: 10px;
+  font-size: 15px;
+  border-left: 1px solid #eee;
+  padding-left: 10px;
+}
+
+.aliases span {
+  font-weight: bold;
+  font-size: 13px;
+}
+
+.page-image {
+  float: right;
+  margin-top: 0px;
+  border: 1px solid #F1F1F1;
+  padding: 10px;
+}
+
+a.rdf-link {
+  background: url(../images/rdf.gif) no-repeat center left;
+  padding-left: 30px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  float: right;
+}
+
+a.rdf-link:hover {
+  background-position: 1px;
 }
 
 textarea, input, select {
@@ -195,4 +287,45 @@ h1 a:hover, h2 a:hover {
 	color:#222;
 	background:#EEF4FF;
 	text-decoration: none;
+}
+
+/* tables */
+table.sorted-table {
+  border-spacing: 1px;
+	font-family:arial;
+	background-color: #CDCDCD;
+	margin:10px 0pt 15px;
+	font-size: 8pt;
+	width: 100%;
+	text-align: left;
+}
+table.sorted-table thead tr th, table.sorted-table tfoot tr th {
+	background-color: #e6EEEE;
+	border: 1px solid #FFF;
+	font-size: 8pt;
+	padding: 4px;
+}
+table.sorted-table thead tr .header {
+	background-image: url(bg.gif);
+	background-repeat: no-repeat;
+	background-position: center right;
+	cursor: pointer;
+}
+table.sorted-table tbody td {
+	color: #3D3D3D;
+	padding: 4px;
+	background-color: #FFF;
+	vertical-align: top;
+}
+table.sorted-table tbody tr.odd td {
+	background-color:#F0F0F6;
+}
+table.sorted-table thead tr .headerSortUp {
+	background-image: url(asc.gif);
+}
+table.sorted-table thead tr .headerSortDown {
+	background-image: url(desc.gif);
+}
+table.sorted-table thead tr .headerSortDown, table.sorted-table thead tr .headerSortUp {
+background-color: #8dbdd8;
 }
