--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -105,6 +105,7 @@ fieldset h3 {
 .property-label {
   float: left;
   width: 150px;
+  padding-right: 20px;
 }
 
 .property-values {
@@ -134,6 +135,7 @@ fieldset h3 {
 
 .page-info {
   float: left;
+  width: 760px;
 }
 
 .aliases {
@@ -165,6 +167,18 @@ a.rdf-link {
 
 a.rdf-link:hover {
   background-position: 1px;
+}
+
+.no-info {
+  margin: 50px;
+  padding: 5px;
+  text-align: center;
+  font-size: 16px;
+  border: 2px solid #ddd;
+}
+
+.namespaces {
+  margin-top: 30px;
 }
 
 textarea, input, select {
