fixed the routing, and key generation

--- a/app/views/entities/show.html.erb
+++ b/app/views/entities/show.html.erb
@@ -61,6 +61,6 @@
     <% end %>
   </div>
   
-  <a href="/rdf/entity/<%= @entity.key.split('/').drop(1) %>" class="rdf-link">RDF тройки</a>
+  <a href="<%= rdf_entities_path %>" class="rdf-link">RDF тройки</a>
   
 <% end %>
