--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -112,26 +112,21 @@ fieldset h3 {
   float: left;
 }
 
-#flashes {
-}
-
-#flash_notice, #flash_error {
-	border: solid 3px #bbccdd;
-    display: block;
-    padding: 9px 10px;
-    padding-top: 10px;
-    position: fixed;
-    top: 31px;
-    right: 40px;
+#flash_notice, #flash_error, #flash_alert {
+  padding: 5px 8px;
+  margin: 10px 0;
 }
 
 #flash_notice {
-    background-color: #CFC;
+  background-color: #CFC;
+  border: solid 1px #6C6;
 }
 
-#flash_error {
-    background-color: #FCC;
+#flash_error, #flash_alert {
+  background-color: #FCC;
+  border: solid 1px #C66;
 }
+
 
 .page-info {
   float: left;
