--- a/app/views/namespaces/index.html.erb
+++ b/app/views/namespaces/index.html.erb
@@ -1,29 +1,9 @@
 <% title "namespaces" %>
 
-<table class="sorted-table"> 
-  <thead> 
-    <tr> 
-      <th width="150px">Title</th> 
-      <th>Description</th> 
-    </tr> 
-  </thead> 
-  <tbody> 
+<div id="sidebar">
+<ul id="menu">
     <% @namespaces.each do |namespace| %>
-      <tr>
-        <td><a href="<%= url_for namespace %>"><span class="entity-link"><%= namespace.key.capitalize.tr("_", " ") %></span></td>
-        <td><%= namespace.description[0..300] + "..." %></td>
-      </tr>
+      <li><a href="<%= url_for namespace %>"><%= namespace.key.capitalize.tr("_", " ") %></a></li>
     <% end %>
-  </tbody>
-</table>
-
-
-<script language="javascript">
-<!--
-$(document).ready(function() 
-    { 
-        $(".sorted-table").tablesorter(); 
-    } 
-); 
-//-->
-</script>
+</ul>
+</div>
