--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -182,6 +182,10 @@ textarea, input, select {
 	color: #555;
 }
 
+textarea {
+  white-space: normal; 
+}
+
 select {
 	color: #000;
 }
@@ -265,7 +269,6 @@ label {
 }
 
 h1, h2 {
-    margin-bottom: 0px;
     margin-top: 0px;
 }
 
@@ -399,3 +402,50 @@ background-color: #8dbdd8;
   text-align: center;
   margin-bottom: 10px;
 }
+
+
+
+
+
+
+
+ 
+#sidebar {
+height:400px;
+padding: 20px 0;
+overflow:hidden;
+position:relative;
+}	
+ 
+#menu {
+width:100%;
+list-style:none;
+padding:0;
+margin:0;
+top:0;
+position:relative;
+height:100%;
+}
+ 
+#menu li {
+padding:15px 0;
+display:block;
+overflow:hidden;
+cursor:hand;
+cursor:pointer;
+}
+ 
+#menu li a {
+background:#1f1f1f;
+color:#ddd;
+font-weight:900;
+display:inline;
+padding:20px 20px 5px 8px;
+text-decoration:none;
+}
+ 
+#menu li span {
+font-size:9px;
+color:#464646;
+}
+ 
