--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title><%= content_for(:title) || "codename Vatican" %></title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults, 'jquery.tablesorter.min.js', 'jquery.easing.1.3.js', 'jquery.color.js' %>
+  <%= stylesheet_link_tag :all, :cache => true %>
+  <%= javascript_include_tag :defaults, 'jquery.tablesorter.min.js', 'jquery.easing.1.3.js', 'jquery.color.js', :cache => true, :concat => true %>
   <%= csrf_meta_tag %>
   
 <script type="text/javascript"> 
