--- a/app/views/types/show.html.erb
+++ b/app/views/types/show.html.erb
@@ -21,7 +21,7 @@
           <% end %>
         </td>
         <td><a href="<%= url_for entity %>"><span class="entity-link"><%= entity.title %></span></td>
-        <td><%= entity.description[0..300] + "..." %></td>
+        <td><%= (!entity.description.nil?) ? entity.description[0..300] + "..." : "..." %></td>
       </tr>
     <% end %>
   </tbody>
