--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,69 +5,6 @@
   <%= stylesheet_link_tag :all, :cache => true %>
   <%= javascript_include_tag :defaults, 'jquery.tablesorter.min.js', 'jquery.easing.1.3.js', 'jquery.color.js', :cache => true, :concat => true %>
   <%= csrf_meta_tag %>
-  
-<script type="text/javascript"> 
-$(document).ready(function() {	
- 
-	//Background color, mouseover and mouseout
-	var colorOver = '#31b8da';
-	var colorOut = '#1f1f1f';
- 
-	//Padding, mouseover
-	var padLeft = '20px';
-	var padRight = '20px';
-	
-	//Default Padding
-	var defpadLeft = $('#menu li a').css('paddingLeft');
-	var defpadRight = $('#menu li a').css('paddingRight');
-		
-	//Animate the LI on mouse over, mouse out
-	$('#menu li').click(function () {	
-		//Make LI clickable
-		window.location = $(this).find('a').attr('href');
-		
-	}).mouseover(function (){
-		
-		//mouse over LI and look for A element for transition
-		$(this).find('a')
-		.animate( { paddingLeft: padLeft, paddingRight: padRight}, { queue:false, duration:100 } )
-		.animate( { backgroundColor: colorOver }, { queue:false, duration:200 });
- 
-	}).mouseout(function () {
-	
-		//mouse oout LI and look for A element and discard the mouse over transition
-		$(this).find('a')
-		.animate( { paddingLeft: defpadLeft, paddingRight: defpadRight}, { queue:false, duration:100 } )
-		.animate( { backgroundColor: colorOut }, { queue:false, duration:200 });
-	});	
-	
-	//Scroll the menu on mouse move above the #sidebar layer
-	$('#sidebar').mousemove(function(e) {
- 
-		//Sidebar Offset, Top value
-		var s_top = parseInt($('#sidebar').offset().top);		
-		
-		//Sidebar Offset, Bottom value
-		var s_bottom = parseInt($('#sidebar').height() + s_top);
-	
-		//Roughly calculate the height of the menu by multiply height of a single LI with the total of LIs
-		var mheight = parseInt($('#menu li').height() * $('#menu li').length);
-	
-		//I used this coordinate and offset values for debuggin
-		$('#debugging_mouse_axis').html("X Axis : " + e.pageX + " | Y Axis " + e.pageY);
-		$('#debugging_status').html(Math.round(((s_top - e.pageY)/100) * mheight / 2));
-			
-		//Calculate the top value
-		//This equation is not the perfect, but it 's very close	
-		var top_value = Math.round(( (s_top - e.pageY) /100) * mheight / 2);
-		
-		//Animate the #menu by chaging the top value
-		$('#menu').animate({top: top_value}, { queue:false, duration:500});
-	});
- 
-	
-});
-</script> 
 </head>
 <body>
 <div id="header">
@@ -75,7 +12,7 @@ $(document).ready(function() {
     <span class="logo">codename Vatican</span>
     <div class="search">
       <form method="GET">
-        <input class="default-text" type="text" name="search" title="Търсене..." />
+        <input class="default-text" type="text" name="query[title_like]" title="Търсене..." />
       </form>
     </div>
   </div>
@@ -107,20 +44,20 @@ $(document).ready(function() {
 <!--
 $(document).ready(function()
 {
-    $(".default-text").focus(function(srcc)
+    $(".default-text").live("focus", function(srcc)
     {
         if ($(this).val() == $(this)[0].title)
         {
-            $(this).removeClass("default-text-active");
+            $(this).addClass("default-text-active");
             $(this).val("");
         }
     });
     
-    $(".default-text").blur(function()
+    $(".default-text").live("blur", function()
     {
-        if ($(this).val() == "")
+        if ($(this).val() == "" || $(this).val() == $(this)[0].title)
         {
-            $(this).addClass("default-text-active");
+            $(this).removeClass("default-text-active");
             $(this).val($(this)[0].title);
         }
     });
