--- a/app/views/namespaces/show.html.erb
+++ b/app/views/namespaces/show.html.erb
@@ -3,8 +3,8 @@
 <table class="sorted-table"> 
   <thead> 
     <tr> 
-      <th width="150px">Title</th> 
-      <th>Description</th> 
+      <th width="150px">Име</th> 
+      <th>Описание</th> 
     </tr> 
   </thead> 
   <tbody> 
