--- a/app/views/types/show.html.erb
+++ b/app/views/types/show.html.erb
@@ -22,9 +22,9 @@
 <table class="sorted-table"> 
   <thead> 
     <tr> 
-      <th>Image</th> 
-      <th width="150px">Title</th> 
-      <th>Description</th> 
+      <th>Изображение</th> 
+      <th width="150px">Име</th> 
+      <th>Описание</th> 
     </tr> 
   </thead> 
   <tbody> 
