--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -1,23 +1,23 @@
-<% title "authentications-index" %>
+<% title "Аутентикации" %>
 
 <% if @authentications %>
   <% unless @authentications.empty? %>
-    <p><strong>You can sign in to this account using:</strong></p>
+    <p><strong>Може да влизате в този потребител чрез:</strong></p>
     <div class="authentications">
       <% for authentication in @authentications %>
         <div class="authentication">
           <%= image_tag "#{authentication.provider}_32.png", :size => "32x32" %>
           <div class="provider"><%= authentication.provider_name %></div>
           <div class="uid"><%= authentication.uid %></div>
-          <%= link_to "X", authentication, :confirm => 'Are you sure you want to remove this authentication option?', :method => :delete, :class => "remove" %>
+          <%= link_to "X", authentication, :confirm => 'Сигурни ли сте, че искате да премахнете тази опция?', :method => :delete, :class => "remove" %>
         </div>
       <% end %>
       <div class="clear"></div>
     </div>
   <% end %>
-  <p><strong>Add another service to sign in with:</strong></p>
+  <p><strong>Добави друга услуга:</strong></p>
 <% else %>
-  <p><strong>Sign in through one of these services:</strong></p>
+  <p><strong>Влезте чрез една от следните услуги:</strong></p>
 <% end %>
 
 <a href="/auth/twitter" class="auth_provider">
@@ -39,6 +39,6 @@
 <div class="clear"></div>
 
 <% unless user_signed_in? %>
-  <strong>Don`t want to use those services?</strong>
-  <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %> with a password.
+  <strong>Не искате да ги използвате?</strong>
+  <%= link_to "Влезте", new_user_registration_path %> или се <%= link_to "регистрирайте", new_user_session_path %> с парола.
 <% end %>
