--- a/app/views/backend/jobs/queue.html.erb
+++ b/app/views/backend/jobs/queue.html.erb
@@ -1,5 +1,5 @@
 <% title "Опашка" %>
-<%= link_to "Нова задача", new_backend_job_path %>
+<%= link_to "<span>Добави задачи</span>".html_safe, new_backend_job_path, :class => "icon-link icon-sprite-new" %>
 
 <table class="sorted-table"> 
   <thead> 
@@ -16,7 +16,7 @@
         <td><%= job.priority %></td>
         <td><abbr title="<%= l job.run_at, :format => :long %>"><%= time_ago_in_words job.run_at %></abbr></td>
         <td><%= job.handler %></td>
-        <td><%= link_to "X", backend_job_path(job), :confirm => 'Are you sure you want to remove this job?', :method => :delete %></td>
+        <td><%= link_to "<span>Изтрий</span>".html_safe, backend_job_path(job), :confirm => 'Are you sure you want to remove this log?', :method => :delete, :class => "icon-link icon-sprite-remove" %></td>
       </tr>
     <% end %>
   </tbody>
