--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -70,11 +70,17 @@ a:hover {
   color: #555;
 }
 
-.logo {
+a.logo {
   font-weight: bold;
   font-size: 15px;
   color: #fff;
   text-transform: uppercase;
+  text-shadow:2px 2px 2px rgba(64, 64, 64, 0.3);
+}
+
+a.logo:hover {
+  text-decoration: none;
+  text-shadow:2px 2px 2px rgba(64, 64, 64, 0.5);
 }
 
 .entity-link {
