--- a/app/views/entities/show.html.erb
+++ b/app/views/entities/show.html.erb
@@ -1,7 +1,7 @@
 <% title @entity.title %>
 
 <% unless @entity.is_ok? %>
-  <div class="no-info">Този обект още няма никаква информация.</div>
+  <div class="no-info">Все още няма информация за този обект. Очаквайте в най-скоро време обновления.</div>
 <% else %>
   
   <div class="page-info">   
