--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for(:title) || "codename Vatican" %></title>
+  <title><%= content_for(:title) || "allus.in" %></title>
   <%= stylesheet_link_tag :all, :cache => true %>
   <%= javascript_include_tag :defaults, 'jquery.tablesorter.min.js', 'jquery.easing.1.3.js', 'jquery.color.js', :cache => true, :concat => true %>
   <%= csrf_meta_tag %>
@@ -9,7 +9,7 @@
 <body>
 <div id="header">
   <div class="inner">
-    <a href="/" class="logo">codename Vatican</a>
+    <a href="/" class="logo">allus.in</a>
     <div class="search">
       <form method="GET">
         <input class="default-text" type="text" name="query[title_like]" title="Търсене..." />
